--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,131 @@
 {
+    "name": "speckcommerce",
+    "description": "Open Source E-Commerce Platform.  PHP, Zend Framework 2, ZF2 Modules",
     "minimum-stability": "dev",
-    "require": {
-        "php": ">=5.3.3",
-        "zendframework/zendframework": "2.2.2",
-        "doctrine/doctrine-orm-module": "0.8.*@dev",
-        "hounddog/doctrine-data-fixture-module": "dev-master",
-        "zendframework/zftool": "dev-master",
-        "gedmo/doctrine-extensions": "2.3.*",
-        "phploc/phploc": "*",
-        "phpmd/phpmd": "dev-master",
-        "sebastian/phpcpd": "2.0.*@dev",
-        "pdepend/pdepend" : "2.*",
-        "ruflin/elastica": "0.20.5.*@dev",
-        "zendframework/zend-developer-tools": "dev-master"
+    "authors": [
+    {
+        "name": "SpeckCommerce Authors",
+        "email": "author@speckcommerce.org"
     }
+    ],
+        "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/zendframework/zf2"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/ZF-Commons/ZfcUser"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/ZF-Commons/ZfcBase"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/speckcommerce/SpeckInstall"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/speckcommerce/SpeckCart"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/speckcommerce/SpeckCatalog"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/speckcommerce/SpeckCatalogCart"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/speckcommerce/SpeckAddress"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/speckcommerce/SpeckImageUploader"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/speckcommerce/SpeckMultisite"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/speckcommerce/SpeckCheckout"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/speckcommerce/SpeckRandomProducts"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/speckcommerce/SpeckUserAddress"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/speckcommerce/SpeckOrder"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/atukai/AtPhpSettings"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/EvanDotPro/EdpSubLayout"
+        },
+        { "type": "composer", "url": "http://zoopcommerce.github.io/pixie"},
+        {
+            "type": "vcs",
+            "url": "https://github.com/RWOverdijk/AssetManager"
+        }
+    ],
+        "require": {
+            "php"                                 : ">=5.4",
+            "zendframework/zendframework"         : "2.*",
+            "speckcommerce/speck-install"         : "dev-master",
+            "speckcommerce/speck-catalog"         : "dev-master",
+            "speckcommerce/speck-cart"            : "dev-master",
+            "speckcommerce/speck-catalog-cart"    : "dev-master",
+            "speckcommerce/speck-address"         : "dev-master",
+            "speckcommerce/speck-user-address"    : "dev-master",
+            "speckcommerce/speck-checkout"        : "dev-master",
+            "speckcommerce/speck-image-uploader"  : "dev-master",
+            "speckcommerce/speck-random-products" : "dev-master",
+            "speckcommerce/speck-order"           : "dev-master",
+            "speckcommerce/speck-multisite"       : "dev-master",
+            "evandotpro/edp-sub-layout"           : "dev-master",
+            "zf-commons/zfc-admin"                : "0.1.*",
+            "rwoverdijk/assetmanager"             : "dev-master",
+            "atukai/at-php-settings"              : "dev-master",
+            
+			"hounddog/doctrine-data-fixture-module": "dev-master",
+			"gedmo/doctrine-extensions": "2.3.*",
+			"phploc/phploc": "*",
+	        "phpmd/phpmd": "dev-master",
+	        "sebastian/phpcpd": "2.0.*@dev",
+	        "pdepend/pdepend" : "2.*",
+	        "ruflin/elastica": "0.20.5.*@dev",
+	        
+            "zendframework/zendoauth"             : "dev-master",
+            "zoopcommerce/havok" : "dev-master",
+            "doctrine/doctrine-module": "dev-master",
+            "doctrine/doctrine-orm-module": "dev-master",
+            "symfony/yaml": "dev-master",
+            "zendframework/zend-developer-tools": "dev-master",
+            "zf-commons/zfc-user": "0.1.*",
+            "zf-commons/zfc-user-doctrine-orm": "dev-master",
+            "zf-commons/zfc-rbac": "dev-master",
+            "zendframework/zftool": "dev-master",
+            "slm/mail": "dev-master",
+            "slm/queue-beanstalkd": "dev-master",
+            "slm/queue-sqs": "0.3.0-beta1",
+            "slm/queue-doctrine": "dev-master",
+            "manuakasam/sam-user": "dev-master",
+            "stroker/cache": "dev-master",
+            "bjyoungblood/bjy-profiler": "dev-master",
+        	"dino/dompdf-module": "dev-master"
+        },
+        "extra": {"zoop-js-path": "public/js"}
 }
+        
+
